manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-app
spec:
  replicas: 2  # Ensure that the application runs on at least 2 pods
  selector:
    matchLabels:
      app: my-java-app
  template:
    metadata:
      labels:
        app: my-java-app
    spec:
      containers:
      - name: my-java-app
        image: localhost:5000/my-java-app:latest  
        ports:
        - containerPort: 9001
