manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-service
spec:
  selector:
    app: my-java-app
  ports:
  - protocol: TCP
    port: 9001  # Expose the service on port 80
    targetPort: 9001  # Forward traffic to port 9001 on pods
  type: ClusterIP  # Use ClusterIP for internal service
