manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-java-ingress
spec:
  rules:
  - host: 10.50.0.10  # Replace with the IP address of your Kubernetes master node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-java-service  # Replace with the actual name of your Kubernetes Service
            port:
              number: 80
